[package]
name = "smoke"
version = "0.0.0"
license = "CC-BY-SA-4.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]
path = "app-bin/index.rs"

[dependencies]
enigo = "0.1.3"
gilrs = "0.10.4"
lazy_static = "1.4.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-4", "task-api", "channel-api"]
